# compiliancehub

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_initial_tenancy_rls.py  0002_documents_chunks.py  0003_chunk_fulltext.py  0004_evaluation_records.py  0005_rls_nullif_guc.py
app/: health.py  main.py
app/auth/: deps.py  router.py  schemas.py  service.py
app/core/: celery_app.py  config.py  database.py  llm.py  security.py  storage.py  tenant_context.py  worker_db.py
app/documents/: models.py  router.py  schemas.py  service.py
app/evaluation/: golden_dataset.json  metrics.py  models.py  router.py  schemas.py  service.py  tasks.py
app/graph/: client.py  extraction.py  service.py  tasks.py
app/ingestion/: chunking.py  embeddings.py  parsing.py  tasks.py
app/integrations/: drive.py  slack.py  tasks.py
app/privacy/: masking.py
app/rag/: agent.py  prompts.py  router.py  schemas.py  web_search.py
app/retrieval/: reranker.py  router.py  schemas.py  service.py
app/tenants/: models.py
data/demo/: data_protection_policy.md  (+2 more)
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
scripts/: seed_demo.py
tests/: conftest.py  test_auth.py  test_chunking.py  test_documents_api.py  test_eval_api.py  test_eval_metrics.py  test_graph_extraction.py  test_graph_service.py  test_ingestion.py  test_integrations.py  test_parsing.py  test_privacy.py  test_rag_agent.py  test_rag_api.py  test_retrieval.py
(+14 files in other folders)
