[project]
name = "compliancehub"
version = "0.1.0"
description = "Multi-Tenant RAG Compliance Audit Platform"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic[email]>=2.8",
    "pydantic-settings>=2.4",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29",
    "psycopg[binary]>=3.2",
    "alembic>=1.13",
    "pgvector>=0.3",
    "celery>=5.4",
    "redis>=5.0",
    "neo4j>=5.23",
    "minio>=7.2",
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7",
    "bcrypt==4.0.1",
    "python-multipart>=0.0.9",
    "httpx>=0.27",
    "structlog>=24.1",
    "tenacity>=8.5",
    "pymupdf>=1.24",
    "python-docx>=1.1",
    "fastembed>=0.4",
]

[project.optional-dependencies]
privacy = [
    "presidio-analyzer>=2.2",
    "presidio-anonymizer>=2.2",
]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "aiosqlite>=0.20",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.setuptools.package-data]
app = ["**/*.json"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "ASYNC"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
